--- a/contacto.html
+++ b/contacto.html
@@ -90,13 +90,13 @@
             <nav id="menu-center">
               <ul>
                 <li>
-                  <a class="actived" href="index.html">Inicio</a>
+                  <a href="index.html">Inicio</a>
                 </li>
                 <li>
                   <a href="proyectos.html">Proyectos</a>
                 </li>
                 <li>
-                  <a href="contacto.html">Contacto</a>
+                  <a class="actived"  href="contacto.html">Contacto</a>
                 </li>
               </ul>
             </nav>
