--- a/proyectos.html
+++ b/proyectos.html
@@ -91,10 +91,10 @@
             <nav id="menu-center">
               <ul>
                 <li>
-                  <a class="actived" href="index.html">Inicio</a>
+                  <a href="index.html">Inicio</a>
                 </li>
                 <li>
-                  <a href="proyectos.html">Proyectos</a>
+                  <a  class="actived" href="proyectos.html">Proyectos</a>
                 </li>
                 <li>
                   <a href="contacto.html">Contacto</a>
