--- a/contacto.html
+++ b/contacto.html
@@ -44,6 +44,7 @@
 
   <!-- content wraper -->
   <div class="content-wrapper">
+
     <!-- subnav -->
     <div class="subnav">
       <div class="container">
@@ -69,7 +70,6 @@
         </div>
       </div>
     </div>
-    <!-- subnav end -->
 
     <!-- nav -->
     <div class="navbar navbar-default navbar-fixed-top">
@@ -96,7 +96,7 @@
                   <a href="proyectos.html">Proyectos</a>
                 </li>
                 <li>
-                  <a class="actived"  href="contacto.html">Contacto</a>
+                  <a class="actived" href="contacto.html">Contacto</a>
                 </li>
               </ul>
             </nav>
@@ -107,7 +107,6 @@
       </div>
       <!-- container -->
     </div>
-    <!-- nav end -->
 
     <!-- subheader -->
     <section id="subheader">
@@ -129,11 +128,6 @@
         </div>
       </div>
     </section>
-    <!-- subheader end -->
-
-    <!-- map -->
-    <div class="onStep" data-animation="fadeIn" data-time="300" id="map-1"></div>
-    <!-- map end -->
 
     <!-- section contact -->
     <section aria-label="contact" class="whitepage">
@@ -176,16 +170,25 @@
         </div>
       </div>
     </section>
-    <!-- section contact end -->
 
     <!-- subfooter -->
     <section aria-label="footer" class="subfooter">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-xs-12">
+          <div class="col-md-4 col-xs-12">
             <div class="logo">
               <img alt="logo" src="img/logo.png">
             </div>
+          </div>
+          <div class="col-md-2 col-xs-12">
+            <h3>
+              Redes
+            </h3>
+            <address>
+              <a href="#"><span class="ti-facebook"></span> Facebook</a>
+              <a href="#"><span class="ti-linkedin"></span> Instagram</a>
+              <a href="#"><span class="ti-linkedin"></span> Linkedin</a>
+            </address>
           </div>
           <div class="col-md-3 col-xs-12">
             <h3>
@@ -214,7 +217,6 @@
         </div>
       </div>
     </section>
-    <!-- subfooter end -->
 
     <!-- footer -->
     <footer>
@@ -226,7 +228,6 @@
           <div class="col-md-6">
             <div class="right">
               <div class="social-icons">
-                <a href="#"><span class="ti-facebook"></span></a>
                 <a href="#"><span class="ti-linkedin"></span></a>
               </div>
             </div>
@@ -234,7 +235,6 @@
         </div>
       </div>
     </footer>
-    <!-- footer end -->
 
     <!-- ScrolltoTop -->
     <div id="totop">
@@ -242,35 +242,11 @@
     </div>
 
   </div>
-  <!-- content wraper end -->
-
-  <!-- Subscribe start -->
-  <div class="white-popup-block mfp-hide animbounceInDown" data-time="0" id="subwrap">
-    <h5>
-      PLEASE FILL YOUR EMAIL BELOW
-    </h5>
-
-    <div class="space-half">
-    </div>
-
-    <form action="subscribe.php" id="subscribe" method="post" name="subscribe">
-      <input class="subscribfield subscribeemail" id="subscribeemail" name="subscribeemail" type="text"> <button
-        class="btn-form" id="submit-2" type="submit">Subscribe</button>
-    </form>
-
-    <div class="subscribesuccess">
-      Thank you for fill your email
-    </div>
-  </div>
-  <!-- Subscribe end -->
 
   <!-- plugin JS -->
   <script src="plugin/pluginson3step.js" type="text/javascript"></script>
   <!-- slider revolution  -->
   <script type="text/javascript" src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-  <!--  map google  -->
-  <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCQ5KODzqooIP496GPLRaMAsZ4eN8Vro_U"></script>
-  <script src="js/map-1.js" type="text/javascript"></script>
   <!-- on3step JS -->
   <script src="js/on3step.js" type="text/javascript"></script>
   <script src="js/plugin-set.js" type="text/javascript"></script>
