--- a/proyecto-detalle.html
+++ b/proyecto-detalle.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Nexo</title>
-    <meta content="" name="description">
-    <meta content="" name="author">
-    <meta content="" name="keywords">
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <!-- favicon -->
-    <link href="img/favicon.png" rel="icon" sizes="32x32" type="image/png">
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- font themify CSS -->
-    <link rel="stylesheet" href="css/themify-icons.css">
-    <!-- font awesome CSS -->
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-    <!-- revolution slider css -->
-    <link rel="stylesheet" type="text/css" href="css/fullscreen.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
-    <link rel="stylesheet" href="css/rev-settings.css" type="text/css">
-    <!-- on3step CSS -->
-    <link href="css/animated-on3step.css" rel="stylesheet">
-    <link href="css/owl.carousel.css" rel="stylesheet">
-    <link href="css/owl.theme.css" rel="stylesheet">
-    <link href="css/owl.transitions.css" rel="stylesheet">
-    <link href="css/on3step-style.css" rel="stylesheet">
-    <link href="css/queries-on3step.css" media="all" rel="stylesheet" type="text/css">
-  
-    <link href="css/css/styles.css" rel="stylesheet" type="text/css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Nexo</title>
+  <meta content="" name="description">
+  <meta content="" name="author">
+  <meta content="" name="keywords">
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+  <!-- favicon -->
+  <link href="img/favicon.png" rel="icon" sizes="32x32" type="image/png">
+  <!-- Bootstrap CSS -->
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <!-- font themify CSS -->
+  <link rel="stylesheet" href="css/themify-icons.css">
+  <!-- font awesome CSS -->
+  <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+  <!-- revolution slider css -->
+  <link rel="stylesheet" type="text/css" href="css/fullscreen.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
+  <link rel="stylesheet" href="css/rev-settings.css" type="text/css">
+  <!-- on3step CSS -->
+  <link href="css/animated-on3step.css" rel="stylesheet">
+  <link href="css/owl.carousel.css" rel="stylesheet">
+  <link href="css/owl.theme.css" rel="stylesheet">
+  <link href="css/owl.transitions.css" rel="stylesheet">
+  <link href="css/on3step-style.css" rel="stylesheet">
+  <link href="css/queries-on3step.css" media="all" rel="stylesheet" type="text/css">
+
+  <link href="css/css/styles.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
 
@@ -45,8 +45,8 @@
   <!-- content wraper -->
   <div class="content-wrapper">
 
-     <!-- subnav -->
-     <div class="subnav">
+    <!-- subnav -->
+    <div class="subnav">
       <div class="container">
         <div class="row">
 
@@ -70,7 +70,6 @@
         </div>
       </div>
     </div>
-    <!-- subnav end -->
 
     <!-- nav -->
     <div class="navbar navbar-default navbar-fixed-top">
@@ -91,7 +90,7 @@
             <nav id="menu-center">
               <ul>
                 <li>
-                  <a  href="index.html">Inicio</a>
+                  <a href="index.html">Inicio</a>
                 </li>
                 <li>
                   <a class="actived" href="proyectos.html">Proyectos</a>
@@ -108,7 +107,6 @@
       </div>
       <!-- container -->
     </div>
-    <!-- nav end -->
 
     <!-- subheader -->
     <section id="subheader">
@@ -131,7 +129,6 @@
         </div>
       </div>
     </section>
-    <!-- subheader end -->
 
     <!-- services -->
     <section class="projects-detail whitepage">
@@ -190,7 +187,6 @@
         </div>
       </div>
     </section>
-    <!-- services end -->
 
     <!-- Related projects -->
     <div class="container">
@@ -330,7 +326,6 @@
 
       </div>
     </div>
-    <!-- Related projects end -->
 
     <!-- spacer -->
     <div class="space-double"></div>
@@ -339,10 +334,20 @@
     <section aria-label="footer" class="subfooter">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-xs-12">
+          <div class="col-md-4 col-xs-12">
             <div class="logo">
               <img alt="logo" src="img/logo.png">
             </div>
+          </div>
+          <div class="col-md-2 col-xs-12">
+            <h3>
+              Redes
+            </h3>
+            <address>
+              <a href="#"><span class="ti-facebook"></span> Facebook</a>
+              <a href="#"><span class="ti-linkedin"></span> Instagram</a>
+              <a href="#"><span class="ti-linkedin"></span> Linkedin</a>
+            </address>
           </div>
           <div class="col-md-3 col-xs-12">
             <h3>
@@ -371,7 +376,6 @@
         </div>
       </div>
     </section>
-    <!-- subfooter end -->
 
     <!-- footer -->
     <footer>
@@ -383,7 +387,6 @@
           <div class="col-md-6">
             <div class="right">
               <div class="social-icons">
-                <a href="#"><span class="ti-facebook"></span></a>
                 <a href="#"><span class="ti-linkedin"></span></a>
               </div>
             </div>
@@ -391,7 +394,6 @@
         </div>
       </div>
     </footer>
-    <!-- footer end -->
 
     <!-- ScrolltoTop -->
     <div id="totop">
@@ -399,27 +401,6 @@
     </div>
 
   </div>
-  <!-- content wraper end -->
-
-  <!-- Subscribe start -->
-  <div class="white-popup-block mfp-hide animbounceInDown" data-time="0" id="subwrap">
-    <h5>
-      PLEASE FILL YOUR EMAIL BELOW
-    </h5>
-
-    <div class="space-half">
-    </div>
-
-    <form action="subscribe.php" id="subscribe" method="post" name="subscribe">
-      <input class="subscribfield subscribeemail" id="subscribeemail" name="subscribeemail" type="text"> <button
-        class="btn-form" id="submit-2" type="submit">Subscribe</button>
-    </form>
-
-    <div class="subscribesuccess">
-      Thank you for fill your email
-    </div>
-  </div>
-  <!-- Subscribe end -->
 
   <!-- plugin JS -->
   <script src="plugin/pluginson3step.js" type="text/javascript"></script>
