--- a/proyectos.html
+++ b/proyectos.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Nexo</title>
-    <meta content="" name="description">
-    <meta content="" name="author">
-    <meta content="" name="keywords">
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <!-- favicon -->
-    <link href="img/favicon.png" rel="icon" sizes="32x32" type="image/png">
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- font themify CSS -->
-    <link rel="stylesheet" href="css/themify-icons.css">
-    <!-- font awesome CSS -->
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-    <!-- revolution slider css -->
-    <link rel="stylesheet" type="text/css" href="css/fullscreen.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
-    <link rel="stylesheet" href="css/rev-settings.css" type="text/css">
-    <!-- on3step CSS -->
-    <link href="css/animated-on3step.css" rel="stylesheet">
-    <link href="css/owl.carousel.css" rel="stylesheet">
-    <link href="css/owl.theme.css" rel="stylesheet">
-    <link href="css/owl.transitions.css" rel="stylesheet">
-    <link href="css/on3step-style.css" rel="stylesheet">
-    <link href="css/queries-on3step.css" media="all" rel="stylesheet" type="text/css">
-  
-    <link href="css/css/styles.css" rel="stylesheet" type="text/css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Nexo</title>
+  <meta content="" name="description">
+  <meta content="" name="author">
+  <meta content="" name="keywords">
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+  <!-- favicon -->
+  <link href="img/favicon.png" rel="icon" sizes="32x32" type="image/png">
+  <!-- Bootstrap CSS -->
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <!-- font themify CSS -->
+  <link rel="stylesheet" href="css/themify-icons.css">
+  <!-- font awesome CSS -->
+  <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+  <!-- revolution slider css -->
+  <link rel="stylesheet" type="text/css" href="css/fullscreen.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
+  <link rel="stylesheet" href="css/rev-settings.css" type="text/css">
+  <!-- on3step CSS -->
+  <link href="css/animated-on3step.css" rel="stylesheet">
+  <link href="css/owl.carousel.css" rel="stylesheet">
+  <link href="css/owl.theme.css" rel="stylesheet">
+  <link href="css/owl.transitions.css" rel="stylesheet">
+  <link href="css/on3step-style.css" rel="stylesheet">
+  <link href="css/queries-on3step.css" media="all" rel="stylesheet" type="text/css">
+
+  <link href="css/css/styles.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
 
@@ -40,13 +40,12 @@
       <span></span>
     </div>
   </div>
-  <!-- preloader end -->
 
   <!-- content wraper -->
   <div class="content-wrapper">
 
-     <!-- subnav -->
-     <div class="subnav">
+    <!-- subnav -->
+    <div class="subnav">
       <div class="container">
         <div class="row">
 
@@ -70,7 +69,6 @@
         </div>
       </div>
     </div>
-    <!-- subnav end -->
 
     <!-- nav -->
     <div class="navbar navbar-default navbar-fixed-top">
@@ -94,7 +92,7 @@
                   <a href="index.html">Inicio</a>
                 </li>
                 <li>
-                  <a  class="actived" href="proyectos.html">Proyectos</a>
+                  <a class="actived" href="proyectos.html">Proyectos</a>
                 </li>
                 <li>
                   <a href="contacto.html">Contacto</a>
@@ -108,7 +106,6 @@
       </div>
       <!-- container -->
     </div>
-    <!-- nav end -->
 
     <!-- subheader -->
     <section id="subheader">
@@ -130,7 +127,6 @@
         </div>
       </div>
     </section>
-    <!-- subheader end -->
 
     <!-- section projects -->
     <section class="whitepage no-top" id="projects">
@@ -307,16 +303,25 @@
 
       </div>
     </section>
-    <!-- section projects end -->
 
     <!-- subfooter -->
     <section aria-label="footer" class="subfooter">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-xs-12">
+          <div class="col-md-4 col-xs-12">
             <div class="logo">
               <img alt="logo" src="img/logo.png">
             </div>
+          </div>
+          <div class="col-md-2 col-xs-12">
+            <h3>
+              Redes
+            </h3>
+            <address>
+              <a href="#"><span class="ti-facebook"></span> Facebook</a>
+              <a href="#"><span class="ti-linkedin"></span> Instagram</a>
+              <a href="#"><span class="ti-linkedin"></span> Linkedin</a>
+            </address>
           </div>
           <div class="col-md-3 col-xs-12">
             <h3>
@@ -345,7 +350,6 @@
         </div>
       </div>
     </section>
-    <!-- subfooter end -->
 
     <!-- footer -->
     <footer>
@@ -357,7 +361,6 @@
           <div class="col-md-6">
             <div class="right">
               <div class="social-icons">
-                <a href="#"><span class="ti-facebook"></span></a>
                 <a href="#"><span class="ti-linkedin"></span></a>
               </div>
             </div>
@@ -365,7 +368,6 @@
         </div>
       </div>
     </footer>
-    <!-- footer end -->
 
     <!-- ScrolltoTop -->
     <div id="totop">
@@ -375,25 +377,7 @@
   </div>
   <!-- content wraper end -->
 
-  <!-- Subscribe start -->
-  <div class="white-popup-block mfp-hide animbounceInDown" data-time="0" id="subwrap">
-    <h5>
-      PLEASE FILL YOUR EMAIL BELOW
-    </h5>
 
-    <div class="space-half">
-    </div>
-
-    <form action="subscribe.php" id="subscribe" method="post" name="subscribe">
-      <input class="subscribfield subscribeemail" id="subscribeemail" name="subscribeemail" type="text"> <button
-        class="btn-form" id="submit-2" type="submit">Subscribe</button>
-    </form>
-
-    <div class="subscribesuccess">
-      Thank you for fill your email
-    </div>
-  </div>
-  <!-- Subscribe end -->
 
   <!-- plugin JS -->
   <script src="plugin/pluginson3step.js" type="text/javascript"></script>
